:skull: Fix ipad alignement bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2780,11 +2780,13 @@ body {
 
 .place-center {
   display: grid;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .site-hero {
   margin-bottom: 2rem;
+  text-shadow: 0px 0px 5px #212529;
 }
 
 .site-footer {
@@ -2794,30 +2796,6 @@ body {
   margin-right: 1rem;
   margin-bottom: 1rem;
   margin-left: 1rem;
-}
-
-@keyframes pulse {
-  from {
-    transform: scale3d(1, 1, 1);
-  }
-  50% {
-    transform: scale3d(1.35, 1.35, 1.35);
-  }
-  to {
-    transform: scale3d(1, 1, 1);
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 1;
-  }
-  50% {
-    opacity: .3;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 .wishcard {
@@ -3106,6 +3084,30 @@ body {
   background: linear-gradient(to left, #CFDEF3, #E0EAFC);
 }
 
+@keyframes pulse {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+  50% {
+    transform: scale3d(1.35, 1.35, 1.35);
+  }
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+  50% {
+    opacity: .3;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .shooting-star {
   position: absolute;
   width: 10px;
@@ -3324,7 +3326,7 @@ body {
 
 .snowman__arm--right {
   right: 20px;
-  bottom: 20px;
+  bottom: 8px;
   transform-origin: left bottom;
   transform: rotate(-10deg) skew(-10deg);
   animation: 4.42s arm-right infinite;
