--- a/src/sass/components/_snowman.scss
+++ b/src/sass/components/_snowman.scss
@@ -122,7 +122,7 @@
 
     &--right {
       right: 20px;
-      bottom: 20px;
+      bottom: 8px;
       transform-origin:left bottom;
       transform: rotate(-10deg) skew(-10deg);
       animation: 4.42s arm-right infinite;
